--- a/frontend/src/SASS/layout/ThingsWeDo.scss
+++ b/frontend/src/SASS/layout/ThingsWeDo.scss
@@ -83,7 +83,7 @@
 }
 
 /* Media query for screens from 1025px wide and up */
-@media (min-width: 992px) and (max-width: 1024px) {
+@media (min-width: 767px) and (max-width: 1024px) {
   .things-we-do {
     margin-top: 15rem;
 
